Fixed Discord Online not showing up on all pages

--- a/style.css
+++ b/style.css
@@ -123,5 +123,5 @@ footer #minecraftOnline{
 
 #bans{
     width: 99.99vw;
-    height: 85vh;
+    height: 90vh;
 }
